--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Task Master</title>
+<title>Nutrition Plan</title>
 {% endblock %}
 
 {% block body %}
 <div class="content">
-    <h1>Task Master</h1>
-    {% if tasks|length < 1 %}
+    <h1>Nutrition Plan</h1>
+    {% if tasks|length < 1 %} <!-- Can tasks be converted to something relevant for nutrition plan?-->
     <h4>There are no tasks. Create one below!</h4>
     {% else %}
     <table>
