--- a/nutritionPlan/templates/base.html
+++ b/nutritionPlan/templates/base.html
@@ -29,17 +29,40 @@
                 <a class="nav-link" href="{{url_for('formPage')}}">Questionnaire</a>
             </li>
         </ul>
+        {% if current_user.is_authenticated %}
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{{url_for('checkLogin')}}">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{url_for('createAccount')}}">Register</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link">Welcome, {{ current_user.username }}</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{{url_for('logoutUser')}}">Logout</a>
+          </li>
         </ul>
+        {% else %}
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" href="{{url_for('checkLogin')}}">Login</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{{url_for('createAccount')}}">Register</a>
+          </li>
+        </ul>
+        {% endif %}}
+        
       </div>
     </nav>
-
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }} ">
+            <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     {% block content %}
 
     {% endblock %}
