--- a/nutritionPlan/templates/createAccount.html
+++ b/nutritionPlan/templates/createAccount.html
@@ -7,6 +7,7 @@ Create Account
 {% block content %}
 <body class="text-center">
     <div class="container">
+        {{ form.hidden_tag() }}
         <img class="mb-4" src="https://res.cloudinary.com/jimshapedcoding/image/upload/v1597332609/android-icon-192x192_ove2a7.png" alt="">
         <h1 class="h3 mb-3 font-weight-normal">
             Please Create your Account
@@ -26,6 +27,12 @@ Create Account
             {{ form.password2(class="form-control", placeholder="Confirm Password") }} 
             
             <br>
+
+            <div class="checkbox mb-3">
+                <h6>Already have an account?</h6>
+                <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Register</a>
+            </div>
+
             {{ form.submit(class="btn btn-lg btn-block btn-primary")}}
         </form>
     </div>
