Bugfixes + cleaning up project files

--- a/nutritionPlan/templates/base.html
+++ b/nutritionPlan/templates/base.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="{{url_for('createAccount')}}">Register</a>
           </li>
         </ul>
-        {% endif %}}
+        {% endif %}
         
       </div>
     </nav>
@@ -74,7 +74,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
   <style>
-      content{
+      body{
         background-color: #212121;
         color: white
       }
