--- a/nutritionPlan/templates/createAccount.html
+++ b/nutritionPlan/templates/createAccount.html
@@ -7,15 +7,16 @@ Create Account
 {% block content %}
 <body class="text-center">
     <div class="container">
-        {{ form.hidden_tag() }}
-        <img class="mb-4" src="https://res.cloudinary.com/jimshapedcoding/image/upload/v1597332609/android-icon-192x192_ove2a7.png" alt="">
-        <h1 class="h3 mb-3 font-weight-normal">
-            Please Create your Account
-        </h1>
-        <br>
-        <form method="POST" class="content" style="color:white">
+        <form method="POST" class="form-register" style="color:white">
+            {{ form.hidden_tag() }}
+            <img class="mb-4" src="" alt="">
+            <h1 class="h3 mb-3 font-weight-normal">
+                CREATE ACCOUNT
+            </h1>
+            <br>
+            
             {{ form.username.label() }}
-            {{ form.username(class="form-control", placeholder="User Name") }} 
+            {{ form.username(class="form-control", placeholder="Username") }} 
 
             {{ form.emailAddress.label() }}
             {{ form.emailAddress(class="form-control", placeholder="Email Address") }}
@@ -30,7 +31,7 @@ Create Account
 
             <div class="checkbox mb-3">
                 <h6>Already have an account?</h6>
-                <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Register</a>
+                <a class="btn btn-sm btn-secondary" href="{{ url_for('checkLogin') }}">Login</a>
             </div>
 
             {{ form.submit(class="btn btn-lg btn-block btn-primary")}}
